Implementando Aquecimento Rapido

--- a/MicroondasMVC/MicroondasMVC/Views/Aquecimentos/Index.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Aquecimentos/Index.cshtml
@@ -5,9 +5,10 @@
 
     <h2>@ViewData["Title"]</h2>
 
-<p>
-    <a asp-action="Aquecer" class="btn btn-info">Inserir Alimento para aquecer</a>
-</p>
+    <p>
+        <a asp-action="Aquecer" class="btn btn-info">Inserir Alimento para aquecer</a>
+        <a asp-action="InicioRapido" class="btn btn-info pull-right">Inserir Alimento para Aquecimento Rapido</a>
+    </p>
 
 
 
