--- a/MicroondasMVC/MicroondasMVC/Views/Aquecimentos/Iniciar.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Aquecimentos/Iniciar.cshtml
@@ -8,4 +8,5 @@
 
 <input asp-for="ID" class="form-control" disabled />
 <input asp-for="Tempo" class="form-control" disabled />
+<input asp-for="Alimento" class="form-control" disabled />
 <input asp-for="Potencia" class="form-control" disabled />
