--- a/MicroondasMVC/MicroondasMVC/Views/Aquecimentos/Aquecer.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Aquecimentos/Aquecer.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Potencia" class="control-label"></label>
-                <input asp-for="Potencia" class="form-control" />
+                <input asp-for="Potencia" class="form-control" value="10" />
                 <span asp-validation-for="Potencia" class="text-danger"></span>
             </div>
 
