--- a/MicroondasMVC/MicroondasMVC/Views/Shared/Error.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Shared/Error.cshtml
@@ -1,7 +1,10 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Ocorreu um erro ao processar o aquecimento";
 }
 <h1 class="text-danger">@ViewData["Title"].</h1>
-<h2 class="text-danger">Ocorreu um erro ao processar o aquecimento.</h2>
 <h2 class="text-danger">@Model.Message</h2>
+
+<div>
+    <a asp-action="Index" class="btn btn-default">Voltar</a>
+</div>
