--- a/MicroondasMVC/MicroondasMVC/Views/Aquecimentos/Iniciar.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Aquecimentos/Iniciar.cshtml
@@ -1,12 +1,24 @@
 ﻿@model MicroondasMVC.Models.Aquecimento
 @{
     ViewData["Title"] = "Iniciar";
+    List<string> stringPontos = Model.ExecutarAquecimento();
 }
 
 <h2>Iniciar</h2>
+<body>
+    <div id="app">
+        <input asp-for="ID" class="form-control" disabled />
+        <input asp-for="Tempo" class="form-control" id="tempo" disabled />
+        <input value="@Model.Alimento" class="form-control" name="alimento" id="teste1" disabled />
+        <input asp-for="Potencia" class="form-control" id="potencia" disabled />
+        
+        @foreach(string linha in stringPontos)
+        {
+            <label>@linha</label>
+        }
+        <label>Aquecida!</label>
+
+    </div>
+</body>
 
 
-<input asp-for="ID" class="form-control" disabled />
-<input asp-for="Tempo" class="form-control" disabled />
-<input asp-for="Alimento" class="form-control" disabled />
-<input asp-for="Potencia" class="form-control" disabled />
