--- a/MicroondasMVC/MicroondasMVC/Views/Shared/Error.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Shared/Error.cshtml
@@ -6,5 +6,5 @@
 <h2 class="text-danger">@Model.Message</h2>
 
 <div>
-    <a asp-action="Index" class="btn btn-default">Voltar</a>
+    <a asp-controller="Aquecimento" asp-action="Index" class="navbar-brand">Voltar</a>
 </div>
