Implementando Pesquisa de Aquecimento padrao Nivel 2

--- a/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/BuscaAquecimento.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/BuscaAquecimento.cshtml
@@ -1,24 +1,9 @@
-﻿@model List<MicroondasMVC.Models.AquecimentoPadrao>;
-@using MicroondasMVC.Models;
+﻿@model List<MicroondasMVC.Models.Aquecimento>
 @{
-    ViewData["Title"] = "Microondas";
+    ViewData["Title"] = "Resultado da busca";
 }
 
 <h2>@ViewData["Title"]</h2>
-
-<p>
-    <a asp-action="Aquecer" class="btn btn-info">Inserir Alimento para aquecer</a>
-    <a asp-action="InicioRapido" class="btn btn-info pull-right">Inserir Alimento para Aquecimento Rapido</a>
-</p>
-<nav class="navbar">
-    <div class="container-fluid">
-        <div class="form-group">
-            <label for="minDate">Pesquisar por Alimento</label>
-            <input type="text" class="form-control" name="alimento" />
-        </div>
-        <a asp-controller="AquecimentoPadrao" asp-route-id="alimento" asp-action="BuscaAquecimento" class="btn btn-info">Pesquisar</a>
-    </div>
-</nav>
 
 <div>
     <table class="table">
