Aplicando alterações na estrutura das classes Service

--- a/MicroondasMVC/MicroondasMVC/Views/Aquecimento/Index.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Aquecimento/Index.cshtml
@@ -8,6 +8,7 @@
 
 <p>
     <a asp-action="Aquecer" class="btn btn-info">Inserir Alimento para aquecer</a>
+    <a asp-action="Inserir" asp-controller="AquecimentoPadrao" class="btn btn-info">Inserir Programa de Aquecimento</a>
     <a asp-action="InicioRapido" class="btn btn-info pull-right">Inserir Alimento para Aquecimento Rapido</a>
 </p>
 <nav class="navbar">
