--- a/MicroondasMVC/MicroondasMVC/Views/Aquecimento/InicioRapido.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Aquecimento/InicioRapido.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MicroondasMVC.Models.Aquecimento
 @{
-    ViewData["Title"] = "InicioRapido";
+    ViewData["Title"] = "Inicio Rapido";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -20,5 +20,5 @@
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a asp-controller="Home" asp-action="Index" >Voltar</a>
 </div>
