--- a/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/Iniciar.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/Iniciar.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Iniciar</h2>
 <body>
-    <div id="app">
+    <div>
         <h2>Aquecendo com o programa: @Model.Nome</h2>
         <h4>Tempo: @Model.Tempo</h4>
         <h4>Alimento compativel com o programa: @Model.Alimento</h4>
