--- a/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/Aquecer.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/Aquecer.cshtml
@@ -5,11 +5,12 @@
 <h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Aquecer">
+        <form asp-action="Aquecer" method="post">
             <div class="form-group">
                 <label>Digite o Alimento: </label>
-                <br/>
-                <input type="text" name="alimento" class="text-danger"/>
+                <br />
+                <input type="text" name="alimento" class="text-danger" />
+                <input type="hidden" name="id" class="text-danger" value="@ViewData["id"]" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Aquecer" class="btn btn-default" />
