--- a/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/Inserir.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/Inserir.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Inserir">
+        <form asp-controller="AquecimentoPadrao" asp-action="Inserir" method="post">
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -37,7 +37,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CaracterDeAquecimento" class="control-label"></label>
-                <input asp-for="CaracterDeAquecimento" class="form-control" />
+                <input asp-for="CaracterDeAquecimento" class="form-control" maxlength="1" />
                 <span asp-validation-for="CaracterDeAquecimento" class="text-danger"></span>
             </div>
             <div class="form-group">
