--- a/MicroondasMVC/MicroondasMVC/Views/Home/Index.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Home/Index.cshtml
@@ -1,94 +1,81 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<MicroondasMVC.Models.AquecimentoPadrao>
+    ;
+@using MicroondasMVC.Models;
+@{
+    ViewData["Title"] = "Microondas";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+<h2>@ViewData["Title"]</h2>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
+<p>
+    <a asp-action="Aquecer" asp-controller="Aquecimento" class="btn btn-info">Inserir Alimento para aquecer(Nivel 1)</a>
+    <a asp-action="Inserir" asp-controller="AquecimentoPadrao" class="btn btn-info">Inserir Programa de Aquecimento(Nivel 3)</a>
+    <a asp-action="InicioRapido" asp-controller="Aquecimento" class="btn btn-info pull-right">Inserir Alimento para Aquecimento Rapido(Nivel 1)</a>
+</p>
+<nav class="navbar">
+    <div class="container-fluid">
+        <form class="navbar-form navbar-left" asp-controller="Home" asp-action="Index" method="get" role="search">
+            <div class="form-group">
+                <div class="form-group">
+                    <label for="minDate">Pesquisar por Alimento</label>
+                    <input type="text" class="form-control" name="alimento" />
+                </div>
+            </div>
+            <button type="submit" class="btn btn-info">Pesquisar(Nivel 2)</button>
+        </form>
     </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
+</nav>
+
+<div>
+    <h4 type="text" class="text-info">Programas (Nivel 2/3)</h4>
+    <table class="table">
+        <thead>
+            <tr class="success">
+                <th>
+                    <h6 type="text" class="text-info">Nome</h6>
+                </th>
+                <th>
+                    <h6 type="text" class="text-info">Alimento</h6>
+                </th>
+                <th>
+                    <h6 type="text" class="text-info">Instruções de Uso</h6>
+                </th>
+                <th>
+                    <h6 type="text" class="text-info">Tempo</h6>
+                </th>
+                <th>
+                    <h6 type="text" class="text-info">Potencia</h6>
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (AquecimentoPadrao item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Alimento)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Instrucoes)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Tempo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Potencia)
+                    </td>
+                    <td>
+                        <form class="bottom-right" asp-controller="AquecimentoPadrao" asp-action="Aquecer" method="get">
+                            <input type="hidden" name="id" value="@item.ID">
+                            <button type="submit" class="btn btn-info">Inserir Alimento</button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
