--- a/MicroondasMVC/MicroondasMVC/Views/Shared/_Layout.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Aquecimento" asp-action="Index" class="navbar-brand">MicroondasMVC</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MicroondasMVC</a>
             </div>
         </div>
     </nav>
