Melhorando o tratamento de exceções Nivel 3

--- a/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/Aquecer.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/Aquecer.cshtml
@@ -9,7 +9,7 @@
             <div class="form-group">
                 <label>Digite o Alimento: </label>
                 <br />
-                <input type="text" name="alimento" class="text-danger" />
+                <input type="text" name="alimento" class="form-control" />
                 <input type="hidden" name="id" class="text-danger" value="@ViewData["id"]" />
             </div>
             <div class="form-group">
@@ -20,5 +20,5 @@
 </div>
 
 <div>
-    <a asp-controller="Aquecimento" asp-action="Index">Voltar</a>
+    <a asp-controller="Home" asp-action="Index">Voltar</a>
 </div>
