--- a/MicroondasMVC/MicroondasMVC/Views/Aquecimento/Aquecer.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Aquecimento/Aquecer.cshtml
@@ -22,9 +22,6 @@
                 <input asp-for="Potencia" class="form-control" value="10" />
                 <span asp-validation-for="Potencia" class="text-danger"></span>
             </div>
-
-
-
             <div class="form-group">
                 <input type="submit" value="Aquecer" class="btn btn-default" />
             </div>
@@ -33,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a asp-controller="Home" asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
