--- a/MicroondasMVC/MicroondasMVC/Views/Aquecimento/InicioRapido.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/Aquecimento/InicioRapido.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="InicioRapido">
+        <form asp-action="InicioRapido" method="post">
             <div class="form-group">
                 <label asp-for="Alimento" class="control-label"></label>
                 <input asp-for="Alimento" class="form-control" />
