--- a/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/Inserir.cshtml
+++ b/MicroondasMVC/MicroondasMVC/Views/AquecimentoPadrao/Inserir.cshtml
@@ -46,6 +46,10 @@
         </form>
     </div>
 </div>
+<div>
+    <a asp-controller="Home" asp-action="Index">Voltar</a>
+</div>
+
 
 @section Scripts{
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
